--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -49,7 +49,7 @@ body {
     position: absolute;
     right: 9.58vw;
     bottom: 21.5vh;
-    font-family: 'Frank Ruhl Libre';
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 2vw;
 }
 
