--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -231,7 +231,7 @@
     <div class="window" id="popup-window">
         <div class="inner-window">
             <label>
-                <input name="query" placeholder="Enter feedback" type="search">
+                <textarea name="query" placeholder="Enter feedback" required></textarea>
             </label>
         </div>
 
