--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -91,7 +91,7 @@
                 <li><img alt="Pastry" class="Pastry" th:src="@{images/Pastry.svg}" src="../../static/images/Pastry.svg" >
                     Pastry</li>
                 <hr>
-                <li><img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Desserts.svg" >
+                <li><img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Dessert.svg" >
                     Desserts</li>
                 <hr>
                 <li><img alt="Drinks" class="Drinks" th:src="@{images/Drinks.svg}" src="../../static/images/Drinks.svg" >
@@ -115,7 +115,7 @@
         <div class="dessert">
             <img alt="cheesecake" class="cheesecake" th:src="@{images/dessert.jpg}" src="../../static/images/dessert.jpg" >
             <div class="rectangle rectangle-left-1">
-                <img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Desserts.svg" >Desserts
+                <img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Dessert.svg" >Desserts
             </div>
         </div>
 
