--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -30,7 +30,7 @@ body {
     border-radius: 2.7vw;
 }
 
-.search-form input, .inner-window input {
+.search-form input {
     height: 6.19vh;
     width: 41.67vw;
     margin-left: 1vw;
@@ -453,6 +453,23 @@ table td {
     z-index: 13;
 }
 
+.inner-window textarea{
+    width: 53vw;
+    height: 27vh;
+    margin-left: 1vw;
+    margin-top: 0.2vh;
+    flex: 1;
+    border: none;
+    background: #FBEFC7;
+    border-radius: 2.25vh 2.25vh 0 0;
+    font-family: 'Frank Ruhl Libre', serif;
+    outline: none;
+    resize: none;
+    autocomplete: off;
+    font-size: 2vw;
+    scrollbar-width: none;
+}
+
 .login-window {
     position: fixed;
     display: none;
@@ -533,8 +550,7 @@ table td {
     width: 8.4375vw;
     height: 4.2593vh;
     text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.25vw;
     font-weight: 400;
     line-height: 4.2593vh;
@@ -554,14 +570,6 @@ table td {
     background-color: transparent;
     border: 0.5vh solid #F2E3B3;
     color: #F2E3B3;
-}
-
-#feedback-input {
-    width: 100%;
-    height: 100px;
-    border: none;
-    padding: 10px;
-    box-sizing: border-box;
 }
 
 .circle-container {
@@ -608,6 +616,24 @@ table td {
     line-height: 1vh;
     text-align: left;
     color: #F2E3B3;
+}
+
+.line{
+    position: absolute;
+    left: 1vw;
+    top: 16vh;
+    width: 73.2vw;
+    border: 1px solid black;
+}
+
+.comment-user-circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1vw;
+    margin-top: 1vh;
+    width: 3.6vw;
+    height: 5.6vh;
 }
 
 
