--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -76,12 +76,11 @@ body {
     align-items: center;
     border-radius: 50%;
     cursor: pointer;
-    pointer-events: auto;
     border: none;
     background-color: #F2E3B3;
 }
 
-.user-container:hover, .user-login-container {
+.user-container:hover {
     background-color: #733506;
     width: 4.6vw;
     height: 9.2593vh;
@@ -366,7 +365,6 @@ body {
     margin-top: 2.7778vh;
     margin-bottom: 2.7778vh;
     border-radius: 4.63vh;
-    background: #F2E3B3;
 }
 
 ::-webkit-scrollbar-thumb {
