--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -231,47 +231,47 @@ ul hr {
     margin-right: 2.344vw;
 }
 
-.FirstDishes{
+.substance{
     width: 2.65625vw;
     height:5.5556vh;
 }
 
-.MainDishes{
+.mDIcon{
     width: 2.05vw;
     height:2.7vh;
 }
 
-.Salads{
+.saladI{
     width: 2.0833vw;
     height:4.167vh;
 }
 
-.Pastry{
+.pastryI{
     width: 2.34375vw;
     height: 3.24075vh;
 }
 
-.Desserts{
+.dessertI{
     width: 2.34375vw;
     height: 3.24075vh;
 }
 
-.Drinks{
+.smoothieI{
     width: 2.34375vw;
     height: 4.1667vh;
 }
 
-.Snacks{
+.snackI{
     width: 2.34375vw;/*45*/
     height: 2.7778vh;/*30*/
 }
 
-.FishDishes{
+.fish{
     width: 2.34375vw;
     height: 3.24075vh; /*35*/
 }
 
-.Sauces{
+.sauceI{
     width: 1.927084vw;
     height: 4.3518vh; /*37*/
 }
