--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -235,7 +235,6 @@ body {
     position: absolute;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1vw; /*48*/
-    font-size: 3vh;
     margin-top: 0.8vh;
     margin-left: 13vw;
     color: black;
@@ -256,8 +255,8 @@ body {
     padding-left: 1.0415vw;
     background: #F2E3B3;
     border-radius: 2.778vh;
-    left: 2.0834vw;
-    top: 24vw;
+    left: 2.1vw;
+    top: 52vh;
     width: 43vw;
     height: 6.8vh;
 }
