--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -142,7 +142,7 @@
     </div>
 
     <div class="mainD">
-        <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/Main dishes.jpg">
+        <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/mainD.jpg">
         <div class="rectangleMD rectangleMD-left">
             <img alt="MainDishes" class="MainDishes" th:src="@{images/Main dishes.svg}" src="../../static/images/Main dishes.svg" >Main dishes
         </div>
