--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -152,7 +152,7 @@ body {
 
 .FavoriteList{
     position: absolute;
-    width: 14.9vw;
+    width: 11vw;
     height: 5.556vh;
     margin-left: 57.5834vw;
     top: 15.1vh;
@@ -163,7 +163,7 @@ body {
 .c4{
     position: absolute;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.75vw; /*48*/
+    font-size: 1.75vw; /*48*/FavoriteList
     font-size: 3.5vh;
     color: black;
     left: 2.7vw;
@@ -174,7 +174,7 @@ body {
 
 .UserList{
     position: absolute;
-    width: 14.9vw;
+    width: 11vw;
     height: 5.556vh;
     margin-left: 74.5834vw;
     top: 15.1vh;
