--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -131,7 +131,7 @@ body {
     position: absolute;
     width: 6.5vw;
     height: 5vh;
-    margin-left: 48.4834vw;
+    left: 51.0834vw;
     top: 14.6vh;
     border: 0.7vh solid #F2E3B3;
     border-radius: 5vh;
@@ -151,9 +151,9 @@ body {
 
 #FavoriteList, #UserList, .Report{
     position: absolute;
-    width: 14.9vw;
+    width: 12vw;
     height: 5.556vh;
-    left: 57.5834vw;
+    left: 61.5vw;
     top: 15.1vh;
     background-color:  #F28705;
     border-radius: 5vh;
@@ -164,12 +164,14 @@ body {
 }
 
 #UserList{
-    left: 74.5834vw;
+    left: 76.5vw;
 }
 
 .Report{
+    position: absolute;
     width: 6.5vw;
     left: 91.4834vw;
+
 }
 
 .mini{
