--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -83,7 +83,7 @@
             <p class="num" th:text="${recipe.getAverageMark()}">8.8</p>
         </a>
     </div>
-    <button id="FavoriteList">Favorite List</button>
+    <button id="FavoriteList">Favorite</button>
     <button id="UserList">Lists</button>
     <button class="Report" id="report-btn">Report</button>
 
