--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -171,7 +171,10 @@ body {
     position: absolute;
     width: 6.5vw;
     left: 91.4834vw;
-
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .mini{
@@ -295,7 +298,9 @@ body {
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.5625vw;
     border: none;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #publish:hover, #FavoriteList:hover, #UserList:hover, .Report:hover{
@@ -481,6 +486,9 @@ body {
     top: 87.6vh;
     cursor: pointer;
     border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     outline: none;
 }
 
