--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -264,6 +264,8 @@ body {
     top: 52vh;
     width: 45vw;
     height: 6.8vh;
+    border: none;
+    outline: none;
 }
 
 .text-form textarea{
@@ -616,6 +618,9 @@ body {
     height: 4.5vh;
     z-index: 13;
     left: 1.5vw;
+    display: flex;
+    justify-content: flex-start; /* Вирівнювання по горизонталі */
+    align-items: flex-start; /* Вирівнювання по вертикалі */
 }
 
 .email {
@@ -663,6 +668,9 @@ body {
     font-size: 2vw;
     color: #FBEFC7;
     border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #send-button {
