--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -262,13 +262,11 @@ body {
 }
 
 .text-form textarea{
-    position: absolute;
-    height: 6vh;
-    width: 75%;
+    height: 4vh;
+    width: 34vw;
     left: 4.0834vw;
-    flex: 2;
-    border: none;
     background: #F2E3B3;
+    border: none;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.25vw;
     outline: none;
@@ -289,11 +287,14 @@ body {
     left: 40vw;
     background-color: #F28705;
     border-radius: 5vh;
-    align-items: center;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.5625vw;
+    text-align: center;
     border: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #publish:hover, #FavoriteList:hover, #UserList:hover, .Report:hover{
@@ -470,12 +471,12 @@ body {
 }
 
 .confirmation{
-    position: absolute;
+    position:fixed;
     width: 2.7vw;
     height: 5.4vh;
     border-radius: 50vh;
     background: #F2B705;
-    margin-left: 95vw;
+    left: 95vw;
     top: 87.6vh;
     cursor: pointer;
     border: none;
@@ -817,5 +818,8 @@ body {
     border: none;
     color: white;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
