added some changes

--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -664,8 +664,7 @@ body {
     background-color: #3E5902;
     border-radius: 2.7vw;
     text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.25vw;
     color: #FBEFC7;
     border: none;
